--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -87,7 +87,7 @@
 \vspace*{1ex}
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
-    \textsc{Current Status:}  & Postdoctoral Scholar at Caltech/IPAC    \\
+    \textsc{Current Status:}  & Postdoctoral Research Associate at Caltech/IPAC     \\
     \textsc{Email, Phone, Web:}  & \href{mailto:wangxin@ipac.caltech.edu}{wangxin@ipac.caltech.edu}     |  +1-805-574-0025  |  \url{http://www.astro.ucla.edu/~xwang}\\
     \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Mail Code 314-6, Caltech \\
                               & 1200 East California Boulevard, Pasadena, CA 91125, USA
@@ -99,32 +99,25 @@
 \vspace*{1ex}
 \begin{tabular}{r|p{5.7in}}
     %--------------------------------------------------------
-    \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech    |   \textbf{Postdoctoral Scholar}   \\
-    \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy and Near-UV Direct Imaging \\
-%                              &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
+    \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\
+    \textsc{Present}          &   \hfill\textbf{Postdoctoral Research Associate}    \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
-    \textsc{Sept. 2015}--     & Department of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
-                              &   \begin{flushright}
-                                      \textbf{Ph.D. in Astronomy \& Astrophysics}
-                                  \end{flushright}    \\[\xnarrow]
-    \textsc{Jun. 2019}        & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
-                              & \hspace*{7.4em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-%                              & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
+    \textsc{Sept. 2015}--     &   Department of Physics and Astronomy, University of California, Los Angeles \\
+    \textsc{Jun. 2019}        &   \hfill\textbf{Ph.D. in Astronomy \& Astrophysics} \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
-    \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics}   \\
-    \textsc{Jun. 2015}        & Graduate Course Cumulative GPA: 3.96     \\
+    \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\
+    \textsc{Jun. 2015}        &   \hfill\textbf{Master of Arts in Physics}      \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
-    \textsc{Sept. 2010}--     & School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics}   \\
-    \textsc{Jun. 2013}        & Field of Interest: Precision Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
-%                              & \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
+    \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University      \\
+    \textsc{Jun. 2013}        &   \hfill\textbf{Master of Science in Astrophysics}      \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
-    \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy}    \\
-    \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26
-    %========================================================
+    \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\
+    \textsc{Jun. 2010}        &   \hfill\textbf{Bachelor of Science in Astronomy}
+  %========================================================
 \end{tabular}
 
 
@@ -218,7 +211,7 @@
     \textsc{Dec. 2018}   &   \href{https://sites.google.com/site/stscigalaxyclub/}{\textbf{Galaxy Journal Club}} @ STScI \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2018}   &   \href{https://www.cfa.harvard.edu/events/galaxies-cosmology-seminar?field_seminar_series_value=fall18}{\textbf{Galaxies \& Cosmology Seminar}} @ CfA Harvard \& Smithsonian \\
+    \textsc{Dec. 2018}   &   \textbf{Galaxies \& Cosmology Seminar} @ CfA Harvard \& Smithsonian \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Nov. 2018}   &   \href{https://docs.google.com/document/d/1fhFuTsbHO7ATeQEiBvRQ4fj_BDR7pM4HPMjxeMyEyh4/edit}{\textbf{IMPS Seminar}} @ UC Santa Cruz \\
@@ -227,16 +220,16 @@
     \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Lunch talk}} @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Oct. 2018}   &   \href{http://www.astro.caltech.edu/events/tea_talks/tea_2018_2019/abstracts/wang.txt}{\textbf{Astronomy Tea Talk}} @ Caltech, Pasadena, CA \\
+    \textsc{Oct. 2018}   &   \textbf{Astronomy Tea Talk} @ Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2018}   &   \textbf{Contributed talk}, @ \href{http://www.arcetri.astro.it/fm7/programme.html}{Focus Meeting 7 at the XXXth IAU General Assembly}, Vienna, Austria \\
+    \textsc{Aug. 2018}   &   \textbf{Contributed talk}, @ Focus Meeting 7 at the XXXth IAU General Assembly, Vienna, Austria \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jul. 2018}   &   \textbf{Invited talk}, @ University of Science and Technology of China, Hefei \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2018}   &   \textbf{Contributed talk with conference fellowship}, @ \href{http://kiaa.pku.edu.cn/gasingalaxies/?q=program}{KIAA Forum on Gas in Galaxies}, Beijing \\
+    \textsc{Jun. 2018}   &   \textbf{Contributed talk with conference fellowship}, @ KIAA Forum on Gas in Galaxies, Beijing \\
     \multicolumn{2}{c}{} \\
 
     \textsc{May 2018}   &   \textbf{Invited talk}, @ 2018 Nanjing University Youth Forum, Nanjing \\
@@ -245,7 +238,7 @@
     \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium talk}}, @ IPAC, Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2018}   &   \href{http://obs.carnegiescience.edu/talk_event/828}{\textbf{Lunch talk}}, @ Carnegie Observatories, Pasadena, CA \\
+    \textsc{Jan. 2018}   &   \textbf{Lunch talk}, @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
@@ -288,13 +281,13 @@
     \textsc{Aug. 2015}   &   \textbf{Contributed talk}, @ \href{http://hffiau.epfl.ch/page-116896.html}{Focus Meeting 22 at the XXIXth IAU General Assembly}, Honolulu, HI     \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2012}   &   \textbf{Contributed talk}, @ \href{http://www.phys.tsinghua.edu.cn/publish/phy/5287/2012/20121102084855753317440/20121102084855753317440_.html}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
+    \textsc{Nov. 2012}   &   \textbf{Contributed talk}, @ Tsinghua Transient Workshop 2012, Tsinghua University, Beijing   \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, Hong Kong, China  \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Apr. 2009}   &   \textbf{Contributed talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
+    \textsc{Apr. 2009}   &   \textbf{Contributed talk}, @ Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions, Cairo \& Alexandria, Egypt     \\
     \multicolumn{2}{c}{}
 
 \end{longtable}
@@ -303,16 +296,18 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace*{-.7em}
-\section{Approved Proposals}
+\section{Approved Observing Proposals}
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[1] HST-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[2] JWST-ERS-1324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
-    \item[3] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
-    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
-    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
-    \item[6] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[1] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[2] JWST-ERS-01324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
+    \item[4] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
+    \item[5] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[6] Keck 2017A\_U037, 2017B\_U058, 2018A\_U158, 2018B\_U061, 2019A\_U130, 2019B\_U057, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[7] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
+    \item[8] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
 \end{list}
 
 
@@ -331,32 +326,22 @@
 \section{Professional Service}
 
 \begin{tabular}{l}
-    \textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
+    \textbullet~Referee for \textit{ApJ, ApJS, PASJ}    \\
+    \textbullet~External reviewer for Large HST proposals in Cycle 29   \\
     \textbullet~External reviewer for Chinese Telescope Access Program Time Allocation Committee  \\
     \textbullet~Selected participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
-    \textbullet~Organizer of the \href{http://kiaa.pku.edu.cn/page/jwst-hands-workshop}{KIAA JWST Proposal Planning Workshop} and the \href{https://sites.google.com/view/ucla-jwst}{UCLA JWST Proposal Planning Workshop}    \\
+    \textbullet~Organizer of the KIAA JWST Proposal Planning Workshop and the \href{https://sites.google.com/view/ucla-jwst}{UCLA JWST Proposal Planning Workshop}    \\
     \textbullet~Organizer of Treu Group Meetings, @ UCSB \& UCLA  \\
     \textbullet~Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, NJU
 \end{tabular}
 
-%\begin{tabular}{r|p{5.4in}}
-%\textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
-%\multicolumn{2}{c}{} \\[\narrow]
-%
-%\textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, NJU \\
-%\textsc{Dec. 2011}    & \small{In total, I arranged 17 meetings, and invited 34 speakers.
-%        %most of which are graduate students. The majority of the speakers come from our school, while we do
-%        %have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science
-%        %and Technology of China, University of Sydney.
-%        The topics are related to the major field of interest of the speakers, who will also share with
-%        participants some academic experience in doing scientific research. This activity is financially
-%        supported by our school.}  \\
-%\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Teaching Experience}
+\section{Teaching and Mentoring}
 
 \begin{tabular}{rp{5.4in}}
+\textsc{\small 2020--Present}  & Zihao Li, graduate student at Tsinghua University, co-advising with Prof. Zheng Cai    \\
+\textsc{\small 2018--2019}  & Jessie Hirtenstein, graduate student at UC Davis, co-advising with Prof. Tucker Jones    \\
 \textsc{\small Mar.--Jun. 2014}  & Teaching assistant of \textit{Physics 3: Basic Physics}, University of California, Santa Barbara \\
 \textsc{\small Sept.--Dec. 2013}  & Teaching assistant of \textit{Physics 6 Lab}, University of California, Santa Barbara \\
 \textsc{\small Sept.--Dec. 2010}  & Teaching assistant of \textit{Theoretical Astrophysics} (upper division undergraduate course), NJU
@@ -377,54 +362,96 @@
 %Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 
-%\clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Publications}
+\section{Publications\hfill Full list available at \href{https://ui.adsabs.harvard.edu/public-libraries/D2s74Q15TomjQ7uGtxK5gQ}{ADS}}
 
 \begingroup
 \renewcommand\arraystretch{1.2}
 \vspace*{-.5em}
 \begin{longtable}{rp{6.3in}}
-%\begin{longtable}{p{17cm}}
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-10 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
-9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
-7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
-6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
-5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})    \\
-4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})  \\
-3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})  \\
-2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259     \\
-1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119})    \\
-%\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
-%\vspace{-0.4cm}
-%\begin{list}{\labelitemi}{\leftmargin=0.5em}
-%    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
-%\end{list}   \\
+11 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
+10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the 
+    MAMMOTH-Grism HST slitless spectroscopic survey. 2021, \textit{Astrophys. J.} in press 
+    (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373})  \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless 
+    Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [11 citations] \\
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 
+    94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [24 citations]  \\
+7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic 
+    noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}
+    {arXiv:1610.07558}) [40 citations]    \\
+6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from 
+    frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
+    [43 citations] \\
+5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an 
+    Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) 
+    [50 citations] \\
+4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality 
+    Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [3 citations] \\
+3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. 
+    Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [25 citations] \\
+2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. 
+    China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
+1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 
+    505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [8 citations]   \\
+
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
-19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
-18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
-17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
-16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
-15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
-14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:1710.00843})   \\
-13  &   Kelly, P. L., ..., \textbf{Wang, X.} et al. Extreme magnification of an individual star at redshift 1.5 by a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})    \\
-12  &   Williams, P. R., ..., \textbf{Wang, X.} Discovery of three strongly lensed quasars in the Sloan Digital Sky Survey. 2018, \textit{MNRAS}, 477L, 70 (\href{https://arxiv.org/abs/1706.01506}{arXiv:1706.01506})  \\
-11  &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). XI. Detection of CIV in Multiple Images of $z=6.11$ Ly$\alpha$ Emitter Behind RXCJ2248.7-4431. 2017, \textit{Astrophys. J.}, 839, 17 (\href{https://arxiv.org/abs/1702.04731}{arXiv:1702.04731}) \\
-10  &   Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503})  \\
-9   &   Vulcani, B., ..., \textbf{Wang, X.} The Grism lens-amplified survey from space (GLASS). VIII. The influence of the cluster properties on Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615})   \\
-8   &   Morishita, T., ..., \textbf{Wang, X.}, et al. The Grism Lens-Amplified Survey from Space (GLASS). IX. The dual origin of low-mass cluster galaxies as revealed by new structural analyses. 2017, \textit{Astrophys. J.}, 835, 254 (\href{https://arxiv.org/abs/1607.00384}{arXiv:1607.00384})   \\
-7   &   Huang, K., ..., \textbf{Wang, X.} Detection of Lyman-Alpha Emission From a Triple Imaged z=6.85 Galaxy Behind MACS J2129.4-0741. 2016, \textit{Astrophys. J. Letters}, 823L, 14 (\href{https://arxiv.org/abs/1605.05771}{arXiv:1605.05771})    \\
-6   &   Hoag, A., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). VI. Comparing the Mass and Light in MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}{arXiv:1603.00505})    \\
-5   &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). III. A census of Ly$\alpha$ Emission at $z\gtrsim$7 from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) \\
-4   &   Rodney, S., ..., \textbf{Wang, X.}, et al. Illuminating a Dark Lens : A Type Ia Supernova Magnified by the Frontier Fields Galaxy Cluster Abell 2744. 2015, \textit{Astrophys. J.}, 811, 70 (\href{https://arxiv.org/abs/1505.06211}{arXiv:1505.06211})   \\
-3   &   Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475})   \\
-2   &   Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})  \\
-1   &   Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
+
+22  &   Prichard, L. J., ..., \textbf{Wang, X.} et al. Lyman Continuum Galaxy Candidates in COSMOS. 2021 \textit{Astrophys. J.} in 
+    press (\href{https://arxiv.org/abs/2110.06945}{arXiv:2110.06945}) [1 citations]  \\
+21  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the 
+    parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008}) [4 citations]  \\
+20  &   Bradac, M., ..., \textbf{Wang, X.} Hubble Frontier Field photometric catalogues of Abell 370 and RXC J2248.7-4431: 
+    multiwavelength photometry, photometric redshifts, and stellar properties. \textit{MNRAS}, 489, 99 
+    (\href{https://arxiv.org/abs/1906.01725}{arXiv:1906.01725}) [9 citations]  \\
+19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and 
+    Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) [28 citations] \\
+18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low 
+    Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) 
+    [13 citations] \\
+17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 
+    129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789}) [19 citations] \\
+16  &   Finney, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, 
+    \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) [9 citations] \\
+15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, 
+    \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852}) [12 citations]  \\
+14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star 
+    Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:
+    1710.00843}) [9 citations]  \\
+13  &   Kelly, P. L., ..., \textbf{Wang, X.} et al. Extreme magnification of an individual star at redshift 1.5 by a galaxy-cluster lens. 2018, 
+    \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279}) [75 citations]  \\
+12  &   Williams, P. R., ..., \textbf{Wang, X.} Discovery of three strongly lensed quasars in the Sloan Digital Sky Survey. 2018, \textit{MNRAS}, 477L, 
+    70 (\href{https://arxiv.org/abs/1706.01506}{arXiv:1706.01506}) [16 citations]  \\
+11  &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). XI. Detection of CIV in Multiple Images of $z=6.11$ 
+    Ly$\alpha$ Emitter Behind RXCJ2248.7-4431. 2017, \textit{Astrophys. J.}, 839, 17 
+    (\href{https://arxiv.org/abs/1702.04731}{arXiv:1702.04731}) [39 citations] \\
+10  &   Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble 
+    Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503}) [53 citations] \\
+9   &   Vulcani, B., ..., \textbf{Wang, X.} The Grism lens-amplified survey from space (GLASS). VIII. The influence of the cluster properties on 
+    Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615}) [13 citations]  \\
+8   &   Morishita, T., ..., \textbf{Wang, X.}, et al. The Grism Lens-Amplified Survey from Space (GLASS). IX. The dual origin of low-mass cluster 
+    galaxies as revealed by new structural analyses. 2017, \textit{Astrophys. J.}, 835, 254 (\href{https://arxiv.org/abs/1607.00384}{arXiv:1607.00384}) 
+    [35 citations]  \\
+7   &   Huang, K., ..., \textbf{Wang, X.} Detection of Lyman-Alpha Emission From a Triple Imaged z=6.85 Galaxy Behind MACS J2129.4-0741. 2016, 
+    \textit{Astrophys. J. Letters}, 823L, 14 (\href{https://arxiv.org/abs/1605.05771}{arXiv:1605.05771}) [30 citations]   \\
+6   &   Hoag, A., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). VI. Comparing the Mass and Light in 
+    MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}
+    {arXiv:1603.00505}) [34 citations]   \\
+5   &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). III. A census of Ly$\alpha$ Emission at $z\gtrsim$7 
+    from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) [54 citations] \\
+4   &   Rodney, S., ..., \textbf{Wang, X.}, et al. Illuminating a Dark Lens : A Type Ia Supernova Magnified by the Frontier Fields Galaxy Cluster 
+    Abell 2744. 2015, \textit{Astrophys. J.}, 811, 70 (\href{https://arxiv.org/abs/1505.06211}{arXiv:1505.06211}) [59 citations]  \\
+3   &   Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey 
+    Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 
+    (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475}) [145 citations]  \\
+2   &   Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies 
+    Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532}) [102 citations] \\
+1   &   Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic 
+    Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833}) [62 citations]
 
 \end{longtable}
 \endgroup
